--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
 
+    <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /-->
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css?v=4.7.0" />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <title>React App</title>
