--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /-->
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css?v=4.7.0" />
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" /> -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
