--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css?v=4.7.0" />
     <!-- <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" /> -->
 
+    <link rel="stylesheet" href="/src/App.css" />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <title>React App</title>
